# emacs-module-wrapper-template

./: .gitignore  CMakeLists.txt  README.md  build.sh  emacs-module-wrapper-template.tcc  function-traits.tcc  param.cc  parameter-count.cc  parameter-traits.tcc  parameter-validation.tcc  sample.cc  test-module.cc  test-script.el  test.sh  varargs_bind.tcc
Instruments.trace/: open.creq
Instruments.trace/Trace1.run/: RunIssues.storedata
Instruments.trace/Trace10.run/: RunIssues.storedata
Instruments.trace/Trace11.run/: RunIssues.storedata
Instruments.trace/Trace12.run/: RunIssues.storedata
Instruments.trace/Trace13.run/: RunIssues.storedata
Instruments.trace/Trace14.run/: RunIssues.storedata
Instruments.trace/Trace15.run/: RunIssues.storedata
Instruments.trace/Trace16.run/: RunIssues.storedata
Instruments.trace/Trace17.run/: RunIssues.storedata
Instruments.trace/Trace18.run/: RunIssues.storedata
Instruments.trace/Trace19.run/: RunIssues.storedata
Instruments.trace/Trace2.run/: RunIssues.storedata
Instruments.trace/Trace20.run/: RunIssues.storedata
Instruments.trace/Trace3.run/: RunIssues.storedata
Instruments.trace/Trace4.run/: RunIssues.storedata
Instruments.trace/Trace5.run/: RunIssues.storedata
Instruments.trace/Trace6.run/: RunIssues.storedata
Instruments.trace/Trace7.run/: RunIssues.storedata
Instruments.trace/Trace8.run/: RunIssues.storedata
Instruments.trace/Trace9.run/: RunIssues.storedata
Instruments.trace/corespace/: MANIFEST.plist
test/: function-traits-test.cc  test.sh
(+419 files in other folders)
